修改一些细节 [1.5]